# 5pecia1.github.io

./: .gitignore  5pecia1-github-io.cabal  README.md  about.html  about.rst  archive.html  buildAndDeploy.sh  contact.html  contact.markdown  index.html  my-site.cabal  robots.txt  site.hs  stack.yaml
.devcontainer/: devcontainer.json
_site/: about.html  archive.html  contact.html  index.html
css/: default.css  github-markdown.css
posts/: 2015-08-12-spqr.markdown  2015-12-07-tu-quoque.html  2016-10-22-install-Python3-Tensorflow-Jupyter-and-connect-Pycharm-on-Windows.html  2016-10-22-install-Python3-Tensorflow-Jupyter-and-connect-Pycharm-on-Windows.markdown  2016-10-22-install-Python3-Tensorflow-Jupyter-and-connet-Pycharm-on-Windows.html  2016-10-22-install-Python3-Tensorflow-Jupyter-and-connet-Pycharm-on-Windows.markdown  2016-10-29-install-matplotlib-on-erroneousboat-tensorflow-python3-jupyter.html  2016-10-29-install-matplotlib-on-erroneousboat-tensorflow-python3-jupyter.markdown  2016-10-31-git-alias-for-hakyll.html  2016-10-31-git-alias-for-hakyll.markdown  2016-11-22-use-lf-with-vim-vscode-git-on-windows.html  2016-11-22-use-lf-with-vim-vscode-git-on-windows.markdown  2017-04-15-Rust-Essentials-review.html  2017-04-15-Rust-Essentials-review.markdown  2018-05-08-markdown.html  2018-05-13-markdown.html  2018-05-13-markdown.markdown  2018-05-15-eclipse-hotkey.html  2018-05-15-eclipse-hotkey.markdown  2018-05-15-eclipse-shortcut.html  2018-05-23-crypto-zombies-lesson-1.html  2018-05-23-crypto-zombies-lesson-1.markdown  2018-06-03-busan-ethereum-study-1-2.html  (+6 more)
(+33 files in other folders)
