name:               5pecia1-github-io
version:            0.4.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , pandoc (>=2.0.5 && <2.3)
  ghc-options:      -threaded
  default-language: Haskell2010
